<resources>
    <string name="app_name">My Music Inc.</string>
    <string name="string_rock">Rock</string>
    <string name="string_pop">Pop</string>
    <string name="string_rap">Rap/Hip-Hop</string>
    <string name="string_spanish">Spanish</string>
    <string name="string_electronic">Electronic</string>
    <string name="options_txt">Welcome to My Music Inc.!\nSee our music genres on this screen and select your own on the menu.</string>
</resources>