<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:background="@color/black">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:src="@drawable/music_logo">
    </ImageView>

    <TextView
        android:layout_width="280dp"
        android:layout_height="80dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:text="@string/options_txt"
        android:textSize="14sp"
        ></TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:background="@color/black">

        <ImageView
            android:layout_width="135dp"
            android:layout_height="200dp"
            android:padding="10dp"
            android:layout_gravity="center"
            android:layout_weight=".3"
            android:src="@drawable/liam">
        </ImageView>

        <ImageView
            android:layout_width="135dp"
            android:layout_height="200dp"
            android:padding="10dp"
            android:layout_gravity="center"
            android:layout_weight=".3"
            android:src="@drawable/katy">
        </ImageView>

        <ImageView
            android:layout_width="135dp"
            android:layout_height="200dp"
            android:padding="10dp"
            android:layout_gravity="center"
            android:layout_weight=".3"
            android:src="@drawable/lamar">
        </ImageView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="400dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:background="@color/black">

        <TextView
            android:layout_width="135dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/string_rock"
            android:layout_weight=".3"
            android:textColor="@color/white">
        </TextView>

        <TextView
            android:layout_width="135dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/string_pop"
            android:layout_weight=".3"
            android:textColor="@color/white">
        </TextView>

        <TextView
            android:layout_width="135dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/string_rap"
            android:layout_weight=".3"
            android:textColor="@color/white">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:background="@color/black">

        <ImageView
            android:layout_width="135dp"
            android:layout_height="150dp"
            android:padding="15dp"
            android:layout_gravity="center"
            android:layout_weight=".5"
            android:src="@drawable/maluma">
        </ImageView>

        <ImageView
            android:layout_width="135dp"
            android:layout_height="150dp"
            android:padding="4dp"
            android:layout_gravity="center"
            android:layout_weight=".5"
            android:src="@drawable/deadmaus">
        </ImageView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:background="@color/black">

        <TextView
            android:layout_width="135dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_weight=".5"
            android:text="@string/string_spanish"
            android:textColor="@color/white">
        </TextView>

        <TextView
            android:layout_width="135dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_weight=".5"
            android:text="@string/string_electronic"
            android:textColor="@color/white">
        </TextView>

    </LinearLayout>




</LinearLayout>